# Short-Form-Expression

./: Cargo.toml  README.md  adapter.ts  authorAdapter.ts  dna.js  index.ts  package-lock.json  package.json  rollup.config.js  shortFormExpressionUI.ts
dna/test/: index.js
dna/zomes/expression/code/: .hcbuild  Cargo.toml
dna/zomes/expression/code/src/: lib.rs  methods.rs
expression/: app.json
expression/test/: index.js  package-lock.json
expression/zomes/expression/: zome.json
expression/zomes/expression/code/: Cargo.toml
expression/zomes/expression/code/src/: lib.rs  methods.rs
hc-dna/: Cargo.toml
hc-dna/zomes/shortform/: Cargo.toml
hc-dna/zomes/shortform/src/: errors.rs  impls.rs  inputs.rs  lib.rs  methods.rs  outputs.rs
hc-dna/zomes/tests/: index.ts  package-lock.json  package.json
shortform.dna.workdir/: dna.json
workdir/: dna.yaml
zomes/shortform/: Cargo.toml
zomes/shortform/src/: impls.rs  inputs.rs  lib.rs  methods.rs  outputs.rs  utils.rs
zomes/tests/: index.ts  package-lock.json  package.json
