[package]
name = "shortform_expression"
version = "0.1.0"
authors = ["jdeepee <joshuadparkin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "shortform_expression"

[dependencies]
derive_more = "0"
serde = "1"
serde_json = "1"
chrono = { version = "*", features = ["serde"] }
hc_time_index = { path = "../../../time_delimited_indexing" }
thiserror = "1.0.20"

hdk = "0.0.100"
holo_hash = "0.0.2-alpha.1"